--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,8 @@
             "prerender": true,
             "ssr": {
               "entry": "server.ts"
-            }
+            },
+            "externalDependencies": [""] 
           },
           "configurations": {
             "production": {
